# 2023-Robot

./: .gitignore  README.md  build.gradle  convert_alliance.py  networktables.json  networktables.json.bck  source_list.json
.pathplanner/: settings.json
docker/: Dockerfile  genjava.sh  rosjava_bootstrap.patch  rosjava_core.patch  zeroconf_jmdns_suite.patch
docker/tj2_interfaces/: CMakeLists.txt  CMakeListsTemplate.txt  build.gradle  package.xml  settings.gradle
docker/tj2_interfaces/msg/: GameObject.msg  GameObjectsStamped.msg  Match.msg  MatchPeriod.msg  NavX.msg  NoGoZones.msg  SwerveModule.msg  SwerveMotor.msg  UVBoundingBox.msg  WaypointArray.msg  XYZBoundingBox.msg  Zone.msg  ZoneArray.msg  ZoneInfo.msg  ZoneInfoArray.msg
docker/tj2_interfaces/srv/: GetAllWaypoints.srv  GetWaypoint.srv  GetWaypoints.srv  SaveWaypoint.srv
src/main/deploy/: somethingcomfortingrobot.chrp
src/main/deploy/pathplanner/: BlueCenterEngage.path  BlueCenterGrid1ToPiece2.path  BlueCenterGrid2ToPiece1.path  BlueCenterGrid3ToEngage.path  BlueCenterGrid3ToMidfield.path  BlueCenterGrid3ToPiece3.path  BlueCenterLeg1.path  BlueCenterLeg2.path  BlueCenterPiece1ToGrid1.path  BlueCenterPiece1ToGrid3-1.path  BlueCenterPiece1ToGrid3-2.path  BlueCenterPiece2ToEngage.path  BlueCenterPiece2ToGrid1.path  BlueCenterPiece2ToGrid3.path  BlueCenterPiece3ToGrid1.path  BlueChargeGrid5ToMobility.path  BlueChargeGrid5ToPiece3.path  BlueChargeMobilityToEngage.path  BlueChargePiece3ToBalance.path  BlueChargePiece3ToEngage.path  BlueEngage.path  BlueEngageBack.path  BlueEngageOver.path  BlueWallGrid7ToMidfield.path  BlueWallGrid8ToPiece4.path  BlueWallGrid9ToPiece3.path  BlueWallLeg1.path  BlueWallPiece3ToGrid7.path  BlueWallPiece4ToGrid9 .path  BlueWallPiece4ToGrid9.path  HolonomicTest.path  HolonomicTest2.path  LoadingSideLeg1.path  RedCenterEngage.path  (+30 more)
(+191 files in other folders)
